--- a/School/LoganKuhlenbeck2_1.htm
+++ b/School/LoganKuhlenbeck2_1.htm
@@ -7,16 +7,18 @@
 </head>
 <body>
 
+    <h1>Wild Frog Gallery</h1>
+    
     <h2>Image 1:</h2>
-    <p>Source page URL: <a href="https://www.goodfreephotos.com/albums/animals/reptiles-and-amphibians/green-frog.jpg" target="_blank">https://www.goodfreephotos.com/albums/animals/reptiles-and-amphibians/green-frog.jpg</a></p>
+    <img src="https://www.goodfreephotos.com/albums/animals/reptiles-and-amphibians/green-frog.jpg" alt="Frog" style="height: 300px;">
     <p>Public domain (No reserved rights specified)</p>
 
     <h2>Image 2:</h2>
-    <p>Source page URL: <a href="https://upload.wikimedia.org/wikipedia/commons/3/31/Candid_frog.jpg" target="_blank">https://upload.wikimedia.org/wikipedia/commons/3/31/Candid_frog.jpg</a></p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Candid_frog.jpg" alt="Frog" style="height: 300px;">
     <p>Public domain (No reserved rights specified)</p>
 
     <h2>Image 3:</h2>
-    <p>Source page URL: <a href="https://upload.wikimedia.org/wikipedia/commons/3/31/Candid_frog.jpg" target="_blank">https://upload.wikimedia.org/wikipedia/commons/3/31/Candid_frog.jpg</a></p>
+      <img src="https://commons.wikimedia.org/wiki/File:Red-eyed_Tree_Frog_%2816521683303%29.jpg" alt="Frog" style="height: 300px;">
     <p>Creative Commons: This work has been released into the public domain by its author, Leon Brooks. This applies worldwide. In some countries, this may not be legally possible; if so: Leon Brooks grants anyone the right to use this work for any purpose, without any conditions, unless such conditions are required by law.</p>
 
 </body>
