--- a/School/LoganKuhlenbeck2_1.htm
+++ b/School/LoganKuhlenbeck2_1.htm
@@ -19,7 +19,7 @@
 
     <!-- Image 3: Red-Eyed Tree Frog -->
     <img src="https://commons.wikimedia.org/wiki/File:Red-eyed_Tree_Frog_%2816521683303%29.jpg" alt="Frog" style="height: 300px;">
-    <p>Creative Commons: Attribution: Andy Morffew You are free: to share – to copy, distribute, and transmit the work, to remix – to adapt the work, Under the following conditions: attribution – You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.
+    <p>Creative Commons: Attribution: Andy Morffew You are free: to share – to copy, distribute, and transmit the work, to remix – to adapt the work, Under the following conditions: attribution – You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.</p>
 
 
 </body>
