--- a/School/LoganKuhlenbeck2_1.htm
+++ b/School/LoganKuhlenbeck2_1.htm
@@ -17,9 +17,9 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Candid_frog.jpg" alt="Frog" style="height: 300px;">
     <p>Public domain (No reserved rights specified)</p>
 
-    <!-- Image 3: Red-Eyed Tree Frog -->
-    <img src="https://commons.wikimedia.org/wiki/File:Red-eyed_Tree_Frog_%2816521683303%29.jpg" alt="Frog" style="height: 300px;">
-    <p>Creative Commons: Attribution: Andy Morffew You are free: to share – to copy, distribute, and transmit the work, to remix – to adapt the work, Under the following conditions: attribution – You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.</p>
+    <!-- Image 3: Wood Frog -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Wood_Frog_%28Lithobates_sylvaticus%29_-_La_P%C3%AAche%2C_Qu%C3%A9bec_03.jpg" alt="Tiger" style="height: 300px;">
+    <p>Creative Commons: This file is licensed under the Creative Commons Attribution-Share Alike 4.0 International license. You are free: to share – copy, distribute, and transmit the work, to remix – and adapt the work, Under the following conditions: attribution – You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so reasonably, but not in any way that suggests the licensor endorses you or your use. share alike – If you remitransform, or build upon the material, you must distribute your contributions under the same or compatible license as the original.</p>
 
 
 </body>
