--- a/School/bowling_scorecard.html
+++ b/School/bowling_scorecard.html
@@ -1,22 +1,64 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Bowling Scorecard</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="scorecard.css">
 </head>
 <body>
-<h2>Bowling Scorecard</h2>
-<table>
-  <tr>
-    <th>Frame</th>
-    <th>Player 1</th>
-    <th>Player 2</th>
-    <th>Player 3</th>
-    <th>Player 4</th>
-  </tr>
-  <!-- More rows will be added here -->
-</table>
+    <h1>Bowling Scorecard</h1>
+    <pre>
+        <code>
+            &lt;!DOCTYPE html&gt;
+            &lt;html&gt;
+            &lt;head&gt;
+                &lt;link rel="stylesheet" type="text/css" href="scorecard.css"&gt;
+            &lt;/head&gt;
+            &lt;body&gt;
+                &lt;h1&gt;Bowling Scorecard&lt;/h1&gt;
+                &lt;table class="scorecard"&gt;
+                    &lt;tr&gt;
+                        &lt;th&gt;Frame&lt;/th&gt;
+                        &lt;th&gt;Player 1&lt;/th&gt;
+                        &lt;th&gt;Player 2&lt;/th&gt;
+                        &lt;th&gt;Player 3&lt;/th&gt;
+                    &lt;/tr&gt;
+                    &lt;tr&gt;
+                        &lt;td&gt;1&lt;/td&gt;
+                        &lt;td&gt;7&lt;/td&gt;
+                        &lt;td&gt;8&lt;/td&gt;
+                        &lt;td&gt;6&lt;/td&gt;
+                    &lt;/tr&gt;
+                    &lt;tr&gt;
+                        &lt;td&gt;2&lt;/td&gt;
+                        &lt;td&gt;10&lt;/td&gt;
+                        &lt;td&gt;9&lt;/td&gt;
+                        &lt;td&gt;7&lt;/td&gt;
+                    &lt;/tr&gt;
+                    &lt;!-- Add more frames here --&gt;
+                &lt;/table&gt;
+            &lt;/body&gt;
+            &lt;/html&gt;
+        </code>
+    </pre>
+    <table class="scorecard">
+        <tr>
+            <th>Frame</th>
+            <th>Player 1</th>
+            <th>Player 2</th>
+            <th>Player 3</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>7</td>
+            <td>8</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10</td>
+            <td>9</td>
+            <td>7</td>
+        </tr>
+        <!-- Add more frames here -->
+    </table>
 </body>
 </html>
