--- a/School/baseball_scorecard.html
+++ b/School/baseball_scorecard.html
@@ -1,20 +1,58 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Baseball Scorecard</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="scorecard.css">
 </head>
 <body>
-<h2>Baseball Scorecard</h2>
-<table>
-  <tr>
-    <th>Inning</th>
-    <th>Team A</th>
-    <th>Team B</th>
-  </tr>
-  <!-- More rows will be added here -->
-</table>
+    <h1>Baseball Scorecard</h1>
+    <pre>
+        <code>
+            &lt;!DOCTYPE html&gt;
+            &lt;html&gt;
+            &lt;head&gt;
+                &lt;link rel="stylesheet" type="text/css" href="scorecard.css"&gt;
+            &lt;/head&gt;
+            &lt;body&gt;
+                &lt;h1&gt;Baseball Scorecard&lt;/h1&gt;
+                &lt;table class="scorecard"&gt;
+                    &lt;tr&gt;
+                        &lt;th&gt;Inning&lt;/th&gt;
+                        &lt;th&gt;Home Team&lt;/th&gt;
+                        &lt;th&gt;Away Team&lt;/th&gt;
+                    &lt;/tr&gt;
+                    &lt;tr&gt;
+                        &lt;td&gt;1&lt;/td&gt;
+                        &lt;td&gt;2&lt;/td&gt;
+                        &lt;td&gt;0&lt;/td&gt;
+                    &lt;/tr&gt;
+                    &lt;tr&gt;
+                        &lt;td&gt;2&lt;/td&gt;
+                        &lt;td&gt;0&lt;/td&gt;
+                        &lt;td&gt;1&lt;/td&gt;
+                    &lt;/tr&gt;
+                    &lt;!-- Add more innings here --&gt;
+                &lt;/table&gt;
+            &lt;/body&gt;
+            &lt;/html&gt;
+        </code>
+    </pre>
+    <table class="scorecard">
+        <tr>
+            <th>Inning</th>
+            <th>Home Team</th>
+            <th>Away Team</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>0</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>0</td>
+            <td>1</td>
+        </tr>
+        <!-- Add more innings here -->
+    </table>
 </body>
 </html>
